# pharma

./: .gitignore  QUICK_START.md  README.md  check_clean.js  check_db.ts  check_dups.js  check_dups2.js  check_dups3.js  dump_finance.js  egypt_drugs_database_full.csv  encrypt_drugs.js  fix_dates.js  jest.config.js  jest.setup.js  lighthouserc.json  litellm_config.yaml  mock-updater-server.js  next.config.js  package-lock.json  package.json  resync_clean.js  run-migrations.js  run-migrations.ts  sentry.client.config.ts  sentry.server.config.ts  tailwind.config.js  temp_query.js  test_add_inventory.ts  test_aggregates.js  test_batch_sale.js  test_sales_return.js  test_trend.js  tsconfig.json  tsconfig.tsbuildinfo  updater.key.pub
.github/workflows/: database-backup.yml  lighthouse-ci.yml  release.yml  test.yml
docs/: debugging-framework.md  menu-architecture.md
public/: manifest.json
scripts/: analyze-query-performance.js  backup-database.js  build-tauri.js  clear-drugs.js  convert-actions.js  database-optimization.sql  fix-dates.js  fix-res.js  fix-tauri-check.js  restore-database.js  seed-db.js  shift-registers-schema.sql  sync-actions.js  test-stores.js  test-suites-phase2.js  test-suites.js  test_bare_insert.ts  test_finance.ts  test_pure.js
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_performance.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs
src/app/: globals.css  layout.tsx  not-found.tsx
src/lib/: env.ts  (+2 more)
(+304 files in other folders)
